--- a/1DLinearConvectionEquation.ipynb
+++ b/1DLinearConvectionEquation.ipynb
@@ -24,15 +24,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T01:22:09.699147Z",
-     "start_time": "2024-06-22T01:22:09.696138Z"
+     "end_time": "2024-06-22T21:20:35.797170Z",
+     "start_time": "2024-06-22T21:20:35.794071Z"
     }
    },
    "cell_type": "code",
    "source": "from IPython.display import Image",
    "id": "a12f94421e81b995",
    "outputs": [],
-   "execution_count": 159
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -73,8 +73,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T01:22:09.716119Z",
-     "start_time": "2024-06-22T01:22:09.712120Z"
+     "end_time": "2024-06-22T21:20:35.843954Z",
+     "start_time": "2024-06-22T21:20:35.837805Z"
     }
    },
    "cell_type": "code",
@@ -88,12 +88,12 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 160
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -180,8 +180,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T01:22:09.736149Z",
-     "start_time": "2024-06-22T01:22:09.733062Z"
+     "end_time": "2024-06-22T21:20:35.847105Z",
+     "start_time": "2024-06-22T21:20:35.844961Z"
     }
    },
    "cell_type": "code",
@@ -194,7 +194,7 @@
    ],
    "id": "f1e212428f2a6bdd",
    "outputs": [],
-   "execution_count": 161
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -209,8 +209,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T01:22:09.739759Z",
-     "start_time": "2024-06-22T01:22:09.737155Z"
+     "end_time": "2024-06-22T21:20:35.850470Z",
+     "start_time": "2024-06-22T21:20:35.847105Z"
     }
    },
    "cell_type": "code",
@@ -233,7 +233,7 @@
      ]
     }
    ],
-   "execution_count": 162
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -248,8 +248,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T01:22:09.743288Z",
-     "start_time": "2024-06-22T01:22:09.739759Z"
+     "end_time": "2024-06-22T21:20:35.854250Z",
+     "start_time": "2024-06-22T21:20:35.851478Z"
     }
    },
    "cell_type": "code",
@@ -274,13 +274,13 @@
      ]
     }
    ],
-   "execution_count": 163
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T01:22:09.806502Z",
-     "start_time": "2024-06-22T01:22:09.745294Z"
+     "end_time": "2024-06-22T21:20:35.943483Z",
+     "start_time": "2024-06-22T21:20:35.854250Z"
     }
    },
    "cell_type": "code",
@@ -293,10 +293,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x239ccddd190>]"
+       "[<matplotlib.lines.Line2D at 0x1595e15c2c0>]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -311,7 +311,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 164
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -363,8 +363,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T01:22:09.812967Z",
-     "start_time": "2024-06-22T01:22:09.807506Z"
+     "end_time": "2024-06-22T21:20:35.949946Z",
+     "start_time": "2024-06-22T21:20:35.943996Z"
     }
    },
    "cell_type": "code",
@@ -383,13 +383,13 @@
    ],
    "id": "704c1e46dd2b51f3",
    "outputs": [],
-   "execution_count": 165
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T01:22:10.075302Z",
-     "start_time": "2024-06-22T01:22:09.812967Z"
+     "end_time": "2024-06-22T21:20:36.252926Z",
+     "start_time": "2024-06-22T21:20:35.949946Z"
     }
    },
    "cell_type": "code",
@@ -413,13 +413,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 166
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T01:22:10.164368Z",
-     "start_time": "2024-06-22T01:22:10.076308Z"
+     "end_time": "2024-06-22T21:20:36.342510Z",
+     "start_time": "2024-06-22T21:20:36.252926Z"
     }
    },
    "cell_type": "code",
@@ -444,7 +444,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 167
+   "execution_count": 21
   },
   {
    "metadata": {},
@@ -471,23 +471,80 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T01:22:10.167354Z",
-     "start_time": "2024-06-22T01:22:10.164368Z"
+     "end_time": "2024-06-22T21:20:36.346021Z",
+     "start_time": "2024-06-22T21:20:36.343518Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "total_x_lenght = 2\n",
-    "number_grid_points_x = 41\n",
+    "total_x_lenght = 100\n",
+    "number_grid_points_x = 11\n",
     "dx = total_x_lenght / (number_grid_points_x-1) \n",
     "number_of_timesteps = 25\n",
     "dt = 0.025\n",
-    "c = 0.5 \n",
-    "arr = np.empty((number_grid_points_x, number_grid_points_x))"
+    "c = 0.5 "
    ],
    "id": "947d10495bf1dc6",
    "outputs": [],
-   "execution_count": 168
+   "execution_count": 22
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 2.2. Initial conditions\n",
+    "\n",
+    "$$\n",
+    "\\[\n",
+    "U(x,0) = \n",
+    "\\begin{cases} \n",
+    "e^{-0.01(x-45)^2} & \\text{if } 20 \\leq x \\leq 70, \\\\\n",
+    "0 & \\text{otherwise}.\n",
+    "\\end{cases}\n",
+    "\\]\n",
+    "$$"
+   ],
+   "id": "9baee3d41b2f034f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-22T23:27:37.351569Z",
+     "start_time": "2024-06-22T23:27:37.347373Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# computational domain\n",
+    "x_0 = np.linspace(0, total_x_lenght, number_grid_points_x)\n",
+    "u_0 = np.where((x_0 >= 20) & (x_0 <= 70), np.exp(-0.01*(x_0-45)**2),0)\n",
+    "print(u_0)"
+   ],
+   "id": "1c0701cb585ee805",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.         0.00193045 0.10539922 0.77880078 0.77880078\n",
+      " 0.10539922 0.00193045 0.         0.         0.        ]\n"
+     ]
+    }
+   ],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-22T21:20:36.359240Z",
+     "start_time": "2024-06-22T21:20:36.356727Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "378033301d87fa1e",
+   "outputs": [],
+   "execution_count": 25
   }
  ],
  "metadata": {
