--- a/1DLinearConvectionEquation.ipynb
+++ b/1DLinearConvectionEquation.ipynb
@@ -509,15 +509,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T23:27:37.351569Z",
-     "start_time": "2024-06-22T23:27:37.347373Z"
+     "end_time": "2024-06-23T02:05:48.365726Z",
+     "start_time": "2024-06-23T02:05:48.362215Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# computational domain\n",
     "x_0 = np.linspace(0, total_x_lenght, number_grid_points_x)\n",
+    "x_0 = np.append(x_0, 110.)\n",
     "u_0 = np.where((x_0 >= 20) & (x_0 <= 70), np.exp(-0.01*(x_0-45)**2),0)\n",
+    "\n",
+    "#append an extra x = 0 to u_0\n",
     "print(u_0)"
    ],
    "id": "1c0701cb585ee805",
@@ -527,11 +530,11 @@
      "output_type": "stream",
      "text": [
       "[0.         0.         0.00193045 0.10539922 0.77880078 0.77880078\n",
-      " 0.10539922 0.00193045 0.         0.         0.        ]\n"
+      " 0.10539922 0.00193045 0.         0.         0.         0.        ]\n"
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 32
   },
   {
    "metadata": {
