--- a/1DLinearConvectionEquation.ipynb
+++ b/1DLinearConvectionEquation.ipynb
@@ -24,15 +24,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-23T20:18:59.996256Z",
-     "start_time": "2024-06-23T20:18:59.993741Z"
+     "end_time": "2024-06-27T13:19:02.125330Z",
+     "start_time": "2024-06-27T13:19:02.122572Z"
     }
    },
    "cell_type": "code",
-   "source": "from IPython.display import Image",
+   "source": [
+    "from IPython.display import Image\n",
+    "from IPython.display import display, Markdown"
+   ],
    "id": "a12f94421e81b995",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -195,16 +198,6 @@
    "id": "f1e212428f2a6bdd",
    "outputs": [],
    "execution_count": 14
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "#### 1.1 Discretization of temporal and spatial domains \n",
-    "\n",
-    "With `total_x_length` = 2,  the spatial domain is $x_i\\in(0,2)$. The discretization of the temporal domain: 25 time steps with a length of $0.025s$ each timestep."
-   ],
-   "id": "6a55759e468daa5"
   },
   {
    "metadata": {
@@ -644,7 +637,7 @@
     }
    },
    "cell_type": "code",
-   "source": "class ",
+   "source": "",
    "id": "a36eed445063007",
    "outputs": [],
    "execution_count": 24
