--- a/nonLinearConvection.ipynb
+++ b/nonLinearConvection.ipynb
@@ -187,7 +187,7 @@
    "source": [
     "# print the results\n",
     "fig, axs = plt.subplots(5, sharex=True, sharey=True)\n",
-    "fig.suptitle('Linear Convection Equation')\n",
+    "fig.suptitle('1D non-linear Convection Equation')\n",
     "\n",
     "for i in range(0,5):\n",
     "    axs[i].plot(np.linspace(0, total_x_length, number_grid_points_x), matrix[i*20,:])\n",
