--- a/courantNumber.ipynb
+++ b/courantNumber.ipynb
@@ -18,7 +18,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "In the past simulations, forward time with forward space discretization scheme and an inappropriate time step pass leads to an undesired behavior in the simulations. Changing the size of the grid can lead to instabilities to. Using the first example of `1DLinearConvectionEquation` and refactoring to use different grid sizes.",
+   "source": "In the past simulations, forward time with forward space discretization scheme and an inappropriate time step pass leads to an undesired behavior in the simulations. Changing the size of the grid can lead to instabilities to. Using the first example of `1DLinearConvectionEquation` and refactoring the code to use different grid sizes:",
    "id": "e90fe57223911baa"
   },
   {
@@ -74,7 +74,7 @@
     "    columns = number_of_grid_points_x\n",
     "    results = np.empty((rows+1, columns))\n",
     "    \n",
-    "    # storing in the results the initial conditions\n",
+    "    # storing the initial conditions into the matrix\n",
     "    results[0, :] = u\n",
     "    \n",
     "    for n in range(number_of_timesteps):\n",
