--- a/1DDifussion.ipynb
+++ b/1DDifussion.ipynb
@@ -14,6 +14,22 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "$$\n",
+    "\\left( \n",
+    "\\begin{array}{ccc}\n",
+    "2\\frac{\\partial u}{\\partial x} & \\frac{\\partial u}{\\partial y} + \\frac{\\partial v}{\\partial x} & \\frac{\\partial u}{\\partial x} + \\frac{\\partial w}{\\partial x} \\\\\n",
+    "\\frac{\\partial u}{\\partial x} + \\frac{\\partial w}{\\partial x} & \\frac{\\partial v}{\\partial y} & \\frac{\\partial v}{\\partial z} + \\frac{\\partial w}{\\partial y} \\\\\n",
+    "\\frac{\\partial u}{\\partial z} + \\frac{\\partial w}{\\partial x} & \\frac{\\partial v}{\\partial z} + \\frac{\\partial w}{\\partial y} & \n",
+    "\\end{array} \n",
+    "\\right)\n",
+    "$$"
+   ],
+   "id": "d8b74143e6967bb3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "Difussion Equation in 1D (also known as the one dimensional heat diffusion equation)\n",
     "\n",
     "$$\\frac{\\partial u}{\\partial t}= \\nu \\frac{\\partial^2 u}{\\partial x^2}$$\n",
