--- a/numericalDiferentiation.ipynb
+++ b/numericalDiferentiation.ipynb
@@ -13,13 +13,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Numerical differentiation schemes with taylor series",
-   "id": "40c424bb30be8a13"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
    "source": [
+    "# Numerical differentiation schemes with taylor series\n",
+    "\n",
     "## Original taylor series\n",
     "\n",
     "$$\n",
@@ -27,66 +23,36 @@
     "    f(x) = \\sum_{n=0}^{\\infty} \\frac{f^{(n)}(a)}{n!} (x - a)^{n}\n",
     "\\tag{1}\n",
     "\\end{equation}\n",
-    "$$"
-   ],
-   "id": "adbb54a613ae9649"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
+    "$$\n",
+    "\n",
     "### Forward expansion $x_i + h$\n",
     "$$\n",
     "\\begin{equation*}\n",
     "    f(x) = f(a) + f'(a) (x - a) + \\frac{1}{2} f''(a) (x - a)^{2} + \\frac{1}{6} f'''(a) (x - a)^{3} + \\cdots \n",
     "\\end{equation*}\n",
-    "$$"
-   ],
-   "id": "77800e1aacabc846"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
+    "$$\n",
+    "\n",
     "Using a change of variable: $a = x - h$, $h = x - a$\n",
     "$$\n",
     "\\begin{equation*}\n",
     "    f(x) = f(x - h) + f'(x - h) h + \\frac{1}{2} f''(x - h) h^{2} + \\frac{1}{6} f'''(x - h) h^{3} + \\cdots\n",
     "\\end{equation*}\n",
-    "$$"
-   ],
-   "id": "542bb615b04658b6"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
+    "$$\n",
+    "\n",
     "Using another change of variable $x = x_i$, and $x_{i-1} = x_i - h$\n",
     "\n",
     "$$\n",
     "\\begin{equation*}\n",
     "    f(x_{i}) = f(x_{i-1}) + f'(x_{i-1}) h + \\frac{1}{2} f''(x_{i-1}) h^{2} + \\frac{1}{6} f'''(x_{i-1}) h^{3} + \\cdots\n",
     "\\end{equation*}\n",
-    "$$"
-   ],
-   "id": "153d67ec55d0cb4"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
+    "$$\n",
+    "\n",
     "Advancing indices, with $i = i + 1$, $x_{i+1} = x_i + h$\n",
     "\\begin{equation}\n",
     "    f(x_{i+1}) = f(x_{i}) + f'(x_{i}) h + \\frac{1}{2} f''(x_{i}) h^{2} + \\frac{1}{6} f'''(x_{i}) h^{3} + \\cdots\n",
     "\\tag{2}\n",
-    "\\end{equation}\n"
-   ],
-   "id": "5d5374706f09cc9b"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
+    "\\end{equation}\n",
+    "\n",
     "### Backward expansion $x_i - h$\n",
     "\n",
     "With $x_i - h = x_{i-h}$\n",
@@ -104,7 +70,7 @@
     "\\end{equation}\n",
     "$$"
    ],
-   "id": "8d38d46d1da623db"
+   "id": "40c424bb30be8a13"
   },
   {
    "metadata": {},
@@ -161,8 +127,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-18T17:32:20.645886Z",
-     "start_time": "2024-06-18T17:32:20.641722Z"
+     "end_time": "2024-07-02T15:24:23.497443Z",
+     "start_time": "2024-07-02T15:24:23.492351Z"
     }
    },
    "cell_type": "code",
@@ -187,7 +153,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -221,10 +187,93 @@
    "id": "e05286acbbe14a06"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-02T15:24:23.500812Z",
+     "start_time": "2024-07-02T15:24:23.498449Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def first_backward_d(f, x, h):\n",
+    "    derivative = (f(x) - f(x-h))/h\n",
+    "    return derivative\n",
+    "\n",
+    "print(\"g\\'(0.5) backward = \", first_backward_d(g, 0.5, 0.25))"
+   ],
+   "id": "efc358e0aedf8078",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g'(0.5) backward =  0.4890625000000002\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### First central difference",
-   "id": "75cdbb63374fcec0"
+   "source": [
+    "### First central difference\n",
+    "\n",
+    "Using tree terms of the taylor forward expanded series\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    f(x_{i+1}) \\approx f(x_{i}) + f'(x_{i}) h + \\frac{1}{2} f''(x_{i}) h^{2} \\tag{7}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "and tree terms of the taylor backward expanded series\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    f(x_{i-1}) \\approx f(x_{i}) - f'(x_{i}) h + \\frac{1}{2} f''(x_{i}) h^{2} \\tag{8}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "substracting equation $7$ from $8$\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation*}\n",
+    "    f(x_{i+1}) - f(x_{i-1}) \\approx 2 f'(x_{i}) h\n",
+    "\\end{equation*}\n",
+    "$$\n",
+    "\n",
+    "solving for the first derivative \n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    f'(x_{i}) = \\frac{f(x_{i+1}) - f(x_{i-1})}{2 h} \\tag{9} \n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "in terms of the forward and backward difference Eq. (9)\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation*}\n",
+    "    f'(x_{i}) = \\frac{\\frac{f(x_{i+1}) - f(x_{i})}{h} + \\frac{f(x_{i}) - f(x_{i-1})}{h}}{2}\n",
+    "\\end{equation*}\n",
+    "$$"
+   ],
+   "id": "cc4c91798af059fb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def first_central_d(f, x, h):\n",
+    "    derivative = (first_forward_d(f, x, h) + first_backward_d(f, x, h))/2\n",
+    "    return derivative\n",
+    "\n",
+    "print(\"g\\'(0.5) central = \", first_central_d(g, 0.5, 0.25))"
+   ],
+   "id": "ef4ee1a837422ba1"
   }
  ],
  "metadata": {
