--- a/indexN.ipynb
+++ b/indexN.ipynb
@@ -1,67 +1,100 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-04T01:30:54.979378Z",
-     "start_time": "2024-07-04T01:30:54.912253Z"
+     "end_time": "2024-07-04T15:07:04.666488Z",
+     "start_time": "2024-07-04T15:07:04.658546Z"
     }
    },
+   "cell_type": "code",
    "source": [
-    "from sympy import LeviCivita, symbols, Matrix\n",
+    "from sympy import LeviCivita, symbols\n",
+    "import numpy as np\n",
     "\n",
-    "# Define the components of the vectors A and B\n",
-    "A1, A2, A3 = symbols('A1 A2 A3')\n",
-    "B1, B2, B3 = symbols('B1 B2 B3')\n",
+    "# Define the Levi-Civita symbol using NumPy and list comprehension\n",
+    "eps = np.array([[[float(LeviCivita(i, j, k)) for k in range(3)] for j in range(3)] for i in range(3)])\n",
+    "print(\"Levi-Civita symbol:\")\n",
+    "print(eps)\n",
     "\n",
-    "A = Matrix([A1, A2, A3])\n",
-    "B = Matrix([B1, B2, B3])\n",
-    "\n",
-    "# Define the indices and the Levi-Civita symbol\n",
-    "i, j, k = symbols('i j k')\n",
-    "epsilon = LeviCivita(i, j, k)\n",
-    "\n",
-    "# Initialize the cross product result as a zero matrix\n",
-    "cross_product = Matrix([0, 0, 0])\n",
+    "# Define the vectors A and B\n",
+    "A = np.array([1, 2, 3])\n",
+    "B = np.array([4, -5, 6])\n",
     "\n",
     "# Calculate the cross product using the Levi-Civita symbol\n",
-    "for i in range(3):\n",
-    "    for j in range(3):\n",
-    "        for k in range(3):\n",
-    "            cross_product[i] += epsilon.subs({i: i, j: j, k: k}) * A[j] * B[k]\n",
+    "cross_product = np.array([sum(eps[i, j, k] * A[j] * B[k] for j in range(3) for k in range(3)) for i in range(3)])\n",
     "\n",
-    "# Simplify the result\n",
-    "cross_product = cross_product.simplify()\n",
-    "\n",
-    "# Display the cross product\n",
-    "cross_product"
+    "# Print the result\n",
+    "print(\"Cross product of A and B:\")\n",
+    "print(cross_product)"
    ],
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-04T01:30:49.370001Z",
-     "start_time": "2024-07-04T01:30:49.362576Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "print(cross_product)",
    "id": "9234148b9a204ba6",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "Levi-Civita symbol:\n",
+      "[[[ 0.  0.  0.]\n",
+      "  [ 0.  0.  1.]\n",
+      "  [ 0. -1.  0.]]\n",
+      "\n",
+      " [[ 0.  0. -1.]\n",
+      "  [ 0.  0.  0.]\n",
+      "  [ 1.  0.  0.]]\n",
+      "\n",
+      " [[ 0.  1.  0.]\n",
+      "  [-1.  0.  0.]\n",
+      "  [ 0.  0.  0.]]]\n",
+      "Cross product of A and B:\n",
+      "[ 27.   6. -13.]\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-04T15:09:09.215477Z",
+     "start_time": "2024-07-04T15:09:08.755415Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sympy import LeviCivita, symbols\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the Levi-Civita symbol using NumPy list comprehension\n",
+    "eps = np.array([[[float(LeviCivita(i, j, k)) for k in range(3)] for j in range(3)] for i in range(3)])\n",
+    "\n",
+    "# Define the components of the vectors A and B\n",
+    "A1, A2, A3 = symbols('A1 A2 A3')\n",
+    "B1, B2, B3 = symbols('B1 B2 B3')\n",
+    "\n",
+    "A = np.array([A1, A2, A3])\n",
+    "B = np.array([B1, B2, B3])\n",
+    "\n",
+    "# Calculate the cross product using the Levi-Civita symbol\n",
+    "cross_product = np.array([\n",
+    "    sum(eps[i, j, k] * A[j] * B[k] for j in range(3) for k in range(3))\n",
+    "    for i in range(3)\n",
+    "])\n",
+    "\n",
+    "# Print the cross product\n",
+    "print(cross_product)"
+   ],
+   "id": "71fb250d5418896",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0*A2*B3 - 1.0*A3*B2 -1.0*A1*B3 + 1.0*A3*B1 1.0*A1*B2 - 1.0*A2*B1]\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -69,7 +102,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "71fb250d5418896"
+   "id": "d99bddff0dac2864"
   }
  ],
  "metadata": {
