--- a/indexN.ipynb
+++ b/indexN.ipynb
@@ -16,6 +16,12 @@
    "id": "476884bd906cb797"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "b90e089d88b53885"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-04T15:31:44.492337Z",
@@ -138,12 +144,142 @@
    "execution_count": 4
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-04T18:53:49.810661Z",
+     "start_time": "2024-07-04T18:53:49.801952Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sympy import LeviCivita, symbols\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the Levi-Civita symbol using NumPy list comprehension\n",
+    "eps = np.array([[[float(LeviCivita(i, j, k)) for k in range(3)] for j in range(3)] for i in range(3)])\n",
+    "\n",
+    "# Define the Kronecker delta function\n",
+    "def delta(i, j):\n",
+    "    return 1 if i == j else 0\n",
+    "\n",
+    "# Calculate the left-hand side of the identity\n",
+    "lhs = np.array([[[sum(eps[m, i, q] * eps[j, k, q] for q in range(3)) for k in range(3)] for j in range(3)] for m in range(3) for i in range(3)])\n",
+    "originalShape = np.shape(lhs)\n",
+    "lhs = lhs.reshape((3, 3, 3, 3))  # Reshape to 4D array\n",
+    "\n",
+    "# Calculate the right-hand side of the identity\n",
+    "rhs = np.array([[[delta(m, j) * delta(i, k) - delta(m, k) * delta(i, j) for k in range(3)] for j in range(3)] for m in range(3) for i in range(3)])\n",
+    "rhs = rhs.reshape((3, 3, 3, 3))  # Reshape to 4D array\n",
+    "\n",
+    "# Check if both sides are equal\n",
+    "are_equal = np.allclose(lhs, rhs)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"LHS:\")\n",
+    "print(lhs)\n",
+    "print(\"\\nRHS:\")\n",
+    "print(rhs)\n",
+    "print(\"\\nAre both sides equal?\")\n",
+    "print(are_equal)\n"
+   ],
+   "id": "a2faafec75a3799f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LHS:\n",
+      "[[[[ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]]\n",
+      "\n",
+      "  [[ 0.  1.  0.]\n",
+      "   [-1.  0.  0.]\n",
+      "   [ 0.  0.  0.]]\n",
+      "\n",
+      "  [[ 0.  0.  1.]\n",
+      "   [ 0.  0.  0.]\n",
+      "   [-1.  0.  0.]]]\n",
+      "\n",
+      "\n",
+      " [[[ 0. -1.  0.]\n",
+      "   [ 1.  0.  0.]\n",
+      "   [ 0.  0.  0.]]\n",
+      "\n",
+      "  [[ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]]\n",
+      "\n",
+      "  [[ 0.  0.  0.]\n",
+      "   [ 0.  0.  1.]\n",
+      "   [ 0. -1.  0.]]]\n",
+      "\n",
+      "\n",
+      " [[[ 0.  0. -1.]\n",
+      "   [ 0.  0.  0.]\n",
+      "   [ 1.  0.  0.]]\n",
+      "\n",
+      "  [[ 0.  0.  0.]\n",
+      "   [ 0.  0. -1.]\n",
+      "   [ 0.  1.  0.]]\n",
+      "\n",
+      "  [[ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]]]]\n",
+      "\n",
+      "RHS:\n",
+      "[[[[ 0  0  0]\n",
+      "   [ 0  0  0]\n",
+      "   [ 0  0  0]]\n",
+      "\n",
+      "  [[ 0  1  0]\n",
+      "   [-1  0  0]\n",
+      "   [ 0  0  0]]\n",
+      "\n",
+      "  [[ 0  0  1]\n",
+      "   [ 0  0  0]\n",
+      "   [-1  0  0]]]\n",
+      "\n",
+      "\n",
+      " [[[ 0 -1  0]\n",
+      "   [ 1  0  0]\n",
+      "   [ 0  0  0]]\n",
+      "\n",
+      "  [[ 0  0  0]\n",
+      "   [ 0  0  0]\n",
+      "   [ 0  0  0]]\n",
+      "\n",
+      "  [[ 0  0  0]\n",
+      "   [ 0  0  1]\n",
+      "   [ 0 -1  0]]]\n",
+      "\n",
+      "\n",
+      " [[[ 0  0 -1]\n",
+      "   [ 0  0  0]\n",
+      "   [ 1  0  0]]\n",
+      "\n",
+      "  [[ 0  0  0]\n",
+      "   [ 0  0 -1]\n",
+      "   [ 0  1  0]]\n",
+      "\n",
+      "  [[ 0  0  0]\n",
+      "   [ 0  0  0]\n",
+      "   [ 0  0  0]]]]\n",
+      "\n",
+      "Are both sides equal?\n",
+      "True\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "a2faafec75a3799f"
+   "id": "909ba74a1da73ece"
   }
  ],
  "metadata": {
