--- a/indexN.ipynb
+++ b/indexN.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "source": [
     "Sources:\n",
-    "- https://gist.github.com/astrojuanlu/2689795"
+    "- https://gist.github.com/astrojuanlu/2689795\n",
+    "- Continuum Mechanics for engineers, Maze & Maze second edition 1998"
    ],
    "id": "8664d4f7c6d8741f"
   },
@@ -18,7 +19,13 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": [
+    "Prof the definition of the cross product with Levi-Civita:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{a} \\times \\mathbf{b} = \\epsilon_{ijk} a_j b_k \\hat{\\mathbf{i}}\n",
+    "$$"
+   ],
    "id": "b90e089d88b53885"
   },
   {
@@ -144,10 +151,21 @@
    "execution_count": 4
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Prove one of the $\\epsilon-\\delta$ identities: \n",
+    "$$\n",
+    "\\epsilon_{m i q}\\epsilon_{j k q}=\\delta_{mj}\\delta_{i k}-\\delta_{m k}\\delta_{i j}\n",
+    "$$"
+   ],
+   "id": "6d3357718d2de4b1"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-04T18:53:49.810661Z",
-     "start_time": "2024-07-04T18:53:49.801952Z"
+     "end_time": "2024-07-04T22:44:23.068359Z",
+     "start_time": "2024-07-04T22:44:23.062143Z"
     }
    },
    "cell_type": "code",
@@ -160,15 +178,16 @@
     "\n",
     "# Define the Kronecker delta function\n",
     "def delta(i, j):\n",
-    "    return 1 if i == j else 0\n",
+    "    return 1.0 if i == j else 0.0\n",
     "\n",
     "# Calculate the left-hand side of the identity\n",
     "lhs = np.array([[[sum(eps[m, i, q] * eps[j, k, q] for q in range(3)) for k in range(3)] for j in range(3)] for m in range(3) for i in range(3)])\n",
-    "originalShape = np.shape(lhs)\n",
+    "originalShapeLHS = lhs.copy()\n",
     "lhs = lhs.reshape((3, 3, 3, 3))  # Reshape to 4D array\n",
     "\n",
     "# Calculate the right-hand side of the identity\n",
     "rhs = np.array([[[delta(m, j) * delta(i, k) - delta(m, k) * delta(i, j) for k in range(3)] for j in range(3)] for m in range(3) for i in range(3)])\n",
+    "originalShapeRHS = rhs.copy()\n",
     "rhs = rhs.reshape((3, 3, 3, 3))  # Reshape to 4D array\n",
     "\n",
     "# Check if both sides are equal\n",
@@ -228,58 +247,50 @@
       "   [ 0.  0.  0.]]]]\n",
       "\n",
       "RHS:\n",
-      "[[[[ 0  0  0]\n",
-      "   [ 0  0  0]\n",
-      "   [ 0  0  0]]\n",
+      "[[[[ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]]\n",
       "\n",
-      "  [[ 0  1  0]\n",
-      "   [-1  0  0]\n",
-      "   [ 0  0  0]]\n",
+      "  [[ 0.  1.  0.]\n",
+      "   [-1.  0.  0.]\n",
+      "   [ 0.  0.  0.]]\n",
       "\n",
-      "  [[ 0  0  1]\n",
-      "   [ 0  0  0]\n",
-      "   [-1  0  0]]]\n",
-      "\n",
-      "\n",
-      " [[[ 0 -1  0]\n",
-      "   [ 1  0  0]\n",
-      "   [ 0  0  0]]\n",
-      "\n",
-      "  [[ 0  0  0]\n",
-      "   [ 0  0  0]\n",
-      "   [ 0  0  0]]\n",
-      "\n",
-      "  [[ 0  0  0]\n",
-      "   [ 0  0  1]\n",
-      "   [ 0 -1  0]]]\n",
+      "  [[ 0.  0.  1.]\n",
+      "   [ 0.  0.  0.]\n",
+      "   [-1.  0.  0.]]]\n",
       "\n",
       "\n",
-      " [[[ 0  0 -1]\n",
-      "   [ 0  0  0]\n",
-      "   [ 1  0  0]]\n",
+      " [[[ 0. -1.  0.]\n",
+      "   [ 1.  0.  0.]\n",
+      "   [ 0.  0.  0.]]\n",
       "\n",
-      "  [[ 0  0  0]\n",
-      "   [ 0  0 -1]\n",
-      "   [ 0  1  0]]\n",
+      "  [[ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]]\n",
       "\n",
-      "  [[ 0  0  0]\n",
-      "   [ 0  0  0]\n",
-      "   [ 0  0  0]]]]\n",
+      "  [[ 0.  0.  0.]\n",
+      "   [ 0.  0.  1.]\n",
+      "   [ 0. -1.  0.]]]\n",
+      "\n",
+      "\n",
+      " [[[ 0.  0. -1.]\n",
+      "   [ 0.  0.  0.]\n",
+      "   [ 1.  0.  0.]]\n",
+      "\n",
+      "  [[ 0.  0.  0.]\n",
+      "   [ 0.  0. -1.]\n",
+      "   [ 0.  1.  0.]]\n",
+      "\n",
+      "  [[ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]\n",
+      "   [ 0.  0.  0.]]]]\n",
       "\n",
       "Are both sides equal?\n",
       "True\n"
      ]
     }
    ],
-   "execution_count": 4
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "909ba74a1da73ece"
+   "execution_count": 13
   }
  ],
  "metadata": {
