--- a/numericalDiferentiation.ipynb
+++ b/numericalDiferentiation.ipynb
@@ -274,6 +274,64 @@
     "print(\"g\\'(0.5) central = \", first_central_d(g, 0.5, 0.25))"
    ],
    "id": "ef4ee1a837422ba1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Second forward difference\n",
+    "Using tree terms of the taylor forward expanded series\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation*}\n",
+    "    f(x_{i+1}) \\approx f(x_{i}) + f'(x_{i}) h + \\frac{1}{2} f''(x_{i}) h^{2}\n",
+    "\\end{equation*}\n",
+    "$$\n",
+    "\n",
+    "Multiplying by 2\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    2 f(x_{i+1}) \\approx 2 f(x_{i}) + 2 f'(x_{i}) h + f''(x_{i}) h^{2}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Using tree terms of the taylor forward expanded (x+2)\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    f(x_{i+2}) \\approx f(x_{i}) + 2 f'(x_{i}) h + 2 f''(x_{i}) h^{2}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Substracting the last equations\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation*}\n",
+    "    2 f(x_{i+1}) - f(x_{i+2}) \\approx f(x_{i}) - f''(x_{i}) h^{2}\n",
+    "\\end{equation*}\n",
+    "$$"
+   ],
+   "id": "67f55b3795a90f50"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "Substracting ",
+   "id": "12ef9e012c6873a3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Second central difference\n",
+    "\n",
+    "Consider the taylor expansion of $u_{u+1}$ and $u_{u-1}$ around $u_i$\n",
+    "\n"
+   ],
+   "id": "87d3d252508a4e97"
   }
  ],
  "metadata": {
