--- a/1DDifussion.ipynb
+++ b/1DDifussion.ipynb
@@ -53,9 +53,65 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### The initial-boundary value problem for 1D diffusion for heat transport problems.(Hans Petter Langtangen example)\n",
+    "### The initial-boundary value problem for 1D diffusion in heat transport problems (Hans Petter Langtangen example)\n",
     "\n",
-    "To obtain a unique solution of the difusion equation, or equivalently, to apply numerical methods, we need initial and boundary conditions. The diffusion equation goes with one initial condition $$ "
+    "To obtain a unique solution of the difusion equation, or equivalently, to apply numerical methods, we need initial and boundary conditions. The diffusion equation goes with one initial condition $u(x,0) = I(x)$, where $I$ is a prescribed function. One boundary condition is required at each point on the boundary, which in 1D means that $u$ must be known, $u_x$ must be known or some combination of them.\n",
+    "\n",
+    "We shall start with the simplest boundary condition: $u=0$. The complete initial-boundary value diffusion problem in one space dimension can then be specified as\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial u}{\\partial t} = {\\alpha} \\frac{\\partial^2 u}{\\partial x^2}, \\quad x\\in (0,L),\\ t\\in (0,T] \\tag{3}\n",
+    "$$ \n",
+    "\n",
+    "Initial conditions in $t=0$\n",
+    "\n",
+    "$$\n",
+    "u(x,0) = I(x), \\quad  x\\in [0,L]\n",
+    "$$\n",
+    "\n",
+    "left boundary condition in x=0\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "u(0,t)  = 0, \\quad  t>0,\\end{split} \n",
+    "$$\n",
+    "\n",
+    "right boundary condition in x=L\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "u(L,t)  = 0, \\quad  t>0{\\thinspace .}\\end{split}\n",
+    "$$\n",
+    "\n",
+    "Eq. (3) is known as a one-dimensional heat diffusion equation. With only a first-order derivative in time, only one initial condition is needed, while the second-order derivative in space leads to a demand for two boundary conditions.\n",
+    "\n",
+    "#### Forward Euler scheme\n",
+    "\n",
+    "The first step in the discretization procedure is to replace the domain $[0,L] \\times [0,T]$ by a set of equally spaced mesh points then:\n",
+    "\n",
+    "$$\n",
+    "x_i=i\\Delta x,\\quad i=0,\\ldots,N_x,\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "t_n=n\\Delta t,\\quad n=0,\\ldots,N_t {\\thinspace .}\n",
+    "$$\n",
+    "\n",
+    "With forward time discretization and second order central discretization for space:\n",
+    "\n",
+    "$$\n",
+    "\\frac{u^{n+1}_i-u^n_i}{\\Delta t} = {\\alpha} \\frac{u^{n}_{i+1} - 2u^n_i + u^n_{i-1}}{\\Delta x^2} {\\thinspace }\n",
+    "$$\n",
+    "\n",
+    "Solving for the only unknown $u_{i}^{n+1}$\n",
+    "\n",
+    "$$u_{i}^{n+1}=u_{i}^{n}+\\frac{\\alpha \\Delta t}{\\Delta x^2}(u_{i+1}^{n}-2u_{i}^{n}+u_{i-1}^{n}) \\tag{4}$$\n",
+    "\n",
+    "For calculations we define: \n",
+    "\n",
+    "$$F = \\frac{\\alpha \\Delta t}{\\Delta x^2} \\tag{6}$$"
    ],
    "id": "371d17a06a78c5ec"
   },
@@ -98,7 +154,7 @@
     "\n",
     "#### Solution strategy for explicit scheme\n",
     "\n",
-    "Adopting the functional solution developed in `courantNumber` notebook, 'linearconvCN' function with similiar initial conditions of, at $t = 0, u = 2$ in the interval $0.5 \\le x \\le 1$ and $u = 1$ everywhere else."
+    "Adopting the functional solution developed in `courantNumber` notebook, 'linearconvCN' function with similiar initial conditions of, at $t = 0, u = 2$ in the interval $0.5 \\le x \\le 1$ and $u = 1$ everywhere else. That means that the left boundary condition x = 0, and the right boundary condition x = L = 2 both are equal to $u=1$."
    ],
    "id": "c34edd04efd5edec"
   },
