--- a/1DDifussion.ipynb
+++ b/1DDifussion.ipynb
@@ -339,11 +339,95 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "3c129631b917ca5f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Implicit scheme for backward differential approximation \n",
+    "$$\n",
+    "\\frac{u^{n}_i-u^{n-1}_i}{\\Delta t} = {\\alpha}\\frac{u^{n}_{i+1} - 2u^n_i + u^n_{i-1}}{\\Delta x^2} {\\thinspace .} \\tag{6}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    " Selecting a subset of $ i=0,\\ldots,N_x$, that is: $i=1,\\ldots,Nx-1$ that take count of the internal points of a sparce matrix of size $(Nx-1)\\times (Nx-1)$ and collecting all the unkowns in Eq. (6) the next expression can be written\n",
+    "\n",
+    "$$\n",
+    "- F u^n_{i-1} + \\left(1+  2F \\right) u^{n}_i - F u^n_{i+1} =\n",
+    "    u_{i}^{n-1} \\tag{7}\n",
+    "$$\n",
+    "\n",
+    "Taking count the boundary conditions for x that in this case are $u_0^n = 0$ and $u_{N_x}^n = 0$ and the Eq. (7) the next system of linear equations can be written \n",
+    "\n",
+    "$$\n",
+    "AU = b\n",
+    "$$\n",
+    "\n",
+    "Where A is a $(N_x \\times N_x)$ matrix,\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\\tag{19}\n",
+    "A =\n",
+    "    \\left(\n",
+    "    \\begin{array}{cccccccccc}\n",
+    "    A_{0,0} & A_{0,1} & 0\n",
+    "    &\\cdots &\n",
+    "    \\cdots & \\cdots & \\cdots &\n",
+    "    \\cdots & 0 \\\\\n",
+    "    A_{1,0} & A_{1,1} & 0 & \\ddots &   & &  & &  \\vdots \\\\\n",
+    "    0 & A_{2,1} & A_{2,2} & A_{2,3} &\n",
+    "    \\ddots & &  &  & \\vdots \\\\\n",
+    "    \\vdots & \\ddots &  & \\ddots & \\ddots & 0 &  & & \\vdots \\\\\n",
+    "    \\vdots &  & \\ddots & \\ddots & \\ddots & \\ddots & \\ddots & & \\vdots \\\\\n",
+    "    \\vdots & &  & 0 & A_{i,i-1} & A_{i,i} & A_{i,i+1} & \\ddots & \\vdots \\\\\n",
+    "    \\vdots & & &  & \\ddots & \\ddots & \\ddots &\\ddots  & 0 \\\\\n",
+    "    \\vdots & & & &  &\\ddots  & \\ddots &\\ddots  & A_{N_x-1,N_x} \\\\\n",
+    "    0 &\\cdots & \\cdots &\\cdots & \\cdots & \\cdots  & 0 & A_{N_x,N_x-1} & A_{N_x,N_x}\n",
+    "    \\end{array}\n",
+    "    \\right)\\end{split}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "U=(u^n_0,\\ldots,u^n_{N_x})\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "b = \\left(\\begin{array}{c}\n",
+    "    b_0\\\\\n",
+    "    b_1\\\\\n",
+    "    \\vdots\\\\\n",
+    "    b_i\\\\\n",
+    "    \\vdots\\\\\n",
+    "    b_{N_x}\n",
+    "    \\end{array}\\right)\n",
+    "\\end{split} \\tag{27}\n",
+    "$$\n",
+    "\n",
+    "\n"
+   ],
+   "id": "a6210c5c8a4fd8cf"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "e6c97ffc6df860f"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "51b27e66f218c99e"
+   "id": "f75ed74707a9002c"
   }
  ],
  "metadata": {
