--- a/1DDifussion.ipynb
+++ b/1DDifussion.ipynb
@@ -354,12 +354,14 @@
     "\n",
     "\n",
     "\n",
-    " Selecting a subset of $ i=0,\\ldots,N_x$, that is: $i=1,\\ldots,Nx-1$ that take count of the internal points of a sparce matrix of size $(Nx-1)\\times (Nx-1)$ and collecting all the unkowns in Eq. (6) the next expression can be written\n",
+    " Selecting a subset of $ i=0,\\ldots,N_x$, that is: $i=1,\\ldots,Nx-1$ that take count of the internal points of a sparce matrix of size $(N_x-1)\\times (N_x-1)$ and collecting all the unkowns in Eq. (6) the next expression can be written\n",
     "\n",
     "$$\n",
     "- F u^n_{i-1} + \\left(1+  2F \\right) u^{n}_i - F u^n_{i+1} =\n",
     "    u_{i}^{n-1} \\tag{7}\n",
     "$$\n",
+    "\n",
+    "Where $F = {\\alpha}\\frac{\\Delta t}{\\Delta x^2}$\n",
     "\n",
     "Taking count the boundary conditions for x that in this case are $u_0^n = 0$ and $u_{N_x}^n = 0$ and the Eq. (7) the next system of linear equations can be written \n",
     "\n",
@@ -392,6 +394,29 @@
     "    \\right)\\end{split}\n",
     "$$\n",
     "\n",
+    "the nonzero elements of matrix $A$ are:\n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray}\n",
+    "A_{i,i} = 1+ 2F \\\\\n",
+    "A_{i,i} = 1+ 2F \\\\\n",
+    "A_{i,i+1} = -F\n",
+    "\\end{eqnarray}\n",
+    "$$\n",
+    "\n",
+    "the equations for internal points $i=1,\\ldots,N_x-1$ are: \n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray}\n",
+    "A_{0,0} = 1 \\\\\n",
+    "A_{0,1} = 0 \\\\\n",
+    "A_{N_x,N_x-1} = 0 \\\\\n",
+    "A_{N_x,N_x} = 1\n",
+    "\\end{eqnarray}\n",
+    "$$\n",
+    "\n",
+    "U is a vector that represents the unknown velocities in each point of the x computational domain\n",
+    "\n",
     "$$\n",
     "U=(u^n_0,\\ldots,u^n_{N_x})\n",
     "$$\n",
@@ -408,10 +433,18 @@
     "    \\vdots\\\\\n",
     "    b_{N_x}\n",
     "    \\end{array}\\right)\n",
-    "\\end{split} \\tag{27}\n",
+    "\\end{split} \n",
     "$$\n",
     "\n",
-    "\n"
+    "here are contained the boundary conditions and the initial conditions in the first time step, then $b$ must be uptated to the calculated solution of the velocity. In this case for t = 0 it must contain the initial conditions\n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray}\n",
+    "b_0 = 0 \\\\\n",
+    "b_i = u^{n-1}_i,\\quad i=1,\\ldots,N_x-1 \\\\\n",
+    "b_{N_x} = 0\n",
+    "\\end{eqnarray}\n",
+    "$$"
    ],
    "id": "a6210c5c8a4fd8cf"
   },
@@ -426,7 +459,28 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "def backward_one_d_heat_diffusion(I, a, L, Nx, F, T):\n",
+    "    \n",
+    "    t0 = time.process_time()\n",
+    "    x = np.linspace(0, L, Nx+1)\n",
+    "    dx = x[1] - x[0]\n",
+    "    dt = (F*dx**2)/a\n",
+    "    Nt = int(round(T/float(dt)))\n",
+    "    t = np.linspace(0, T, Nt+1)\n",
+    "    u = np.zeros(Nx+1)\n",
+    "    u_1 = np.zeros(Nx+1)\n",
+    "    \n",
+    "    # Data structures for the linear system\n",
+    "    A = np.zeros((Nx+1, Nx+1))\n",
+    "    b = np.zeros(Nx+1)\n",
+    "    \n",
+    "    for i in range(1, Nx):\n",
+    "        A[i, i-1] = -F\n",
+    "        \n",
+    "    pass\n",
+    "\n"
+   ],
    "id": "f75ed74707a9002c"
   }
  ],
