--- a/1DDifussion.ipynb
+++ b/1DDifussion.ipynb
@@ -43,19 +43,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-06T17:16:21.234199Z",
-     "start_time": "2024-07-06T17:16:20.782248Z"
+     "end_time": "2024-07-09T22:40:13.631238Z",
+     "start_time": "2024-07-09T22:40:12.822553Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import time"
+    "import time\n",
+    "import scipy.linalg as la"
    ],
    "id": "bb8e121c5fffe093",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -398,8 +399,8 @@
     "\n",
     "$$\n",
     "\\begin{eqnarray}\n",
-    "A_{i,i} = 1+ 2F \\\\\n",
-    "A_{i,i} = 1+ 2F \\\\\n",
+    "A_{i,i-1} = -F \\\\\n",
+    "A_{i,i} = 1 + 2F \\\\\n",
     "A_{i,i+1} = -F\n",
     "\\end{eqnarray}\n",
     "$$\n",
@@ -451,7 +452,17 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": [
+    "### Case 1.\n",
+    "\n",
+    "- L = 1.0     # Length of the domain\n",
+    "- T = 10     # Total time\n",
+    "- Nx = 20     # Number of spatial points\n",
+    "- a = 1.0     # Diffusion coefficient\n",
+    "- f = 0.5     # Stability criterion\n",
+    "\n",
+    "\n"
+   ],
    "id": "e6c97ffc6df860f"
   },
   {
@@ -477,9 +488,29 @@
     "    \n",
     "    for i in range(1, Nx):\n",
     "        A[i, i-1] = -F\n",
+    "        A[i, i+1] = -F\n",
+    "        A[i, i] = 1 + 2*F\n",
+    "        A[0,0] = 1\n",
+    "        A[Nx, Nx] = 1\n",
     "        \n",
-    "    pass\n",
-    "\n"
+    "    # set initial condition u(x,0) = I(x)\n",
+    "    for i in range(0, Nx+1):\n",
+    "        u_1[i] = I(x[i])\n",
+    "        \n",
+    "    for n in range(0, Nt):\n",
+    "        # Compute b and solve linear system\n",
+    "        for i in range(1, Nx):\n",
+    "            b[i] = -u_1[i]\n",
+    "        b[0] = 0\n",
+    "        b[Nx] = 0\n",
+    "        u[:] = la.solve(A, b)\n",
+    "        \n",
+    "        # update u_1 before next step\n",
+    "        u_1, u = u, u_1\n",
+    "    \n",
+    "    \n",
+    "    t1 = time.process_time()\n",
+    "    return u, x, t, t1-t0\n"
    ],
    "id": "f75ed74707a9002c"
   }
